examples/errors/returns6.spl
foo(): Int { return;}

main() {return;}